gcc/testsuite/algol68/compile/error-string-break-1.a68
# { dg-options "-fstropping=upper" }  #

BEGIN puts ("hello '_ world") # { dg-error "invalid string break sequence" }  #
END
